<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_cancel"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/tooltip_cancel"/>

    <item android:id="@+id/action_add"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/hello_world"/>

    <item android:id="@+id/action_ok"
        android:showAsAction="always"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/tooltip_ok"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item android:id="@+id/action_help"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_help"/>

</menu>
