...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill_vertical" >

        <LinearLayout
            android:id="@+id/set_list_layout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:orientation="vertical" >

            <com.mobeta.android.dslv.DragSortListView
                android:id="@+id/setlist_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="5.41"
                android:dividerHeight="5dp"
                android:paddingBottom="0dp"
...
